--- a/ShowUI/app.config
+++ b/ShowUI/app.config
@@ -42,6 +42,10 @@
             <setting name="ShowUI_ISCB05_Service_B05_Service" serializeAs="String">
                 <value>http://10.224.81.99/ServiceCenter/Services/B05_Service.asmx</value>
             </setting>
+            <setting name="ShowUI_ThroughtputService_ThroughtputService"
+                serializeAs="String">
+                <value>http://10.224.81.49/sampling/Services/ThroughtputService.asmx</value>
+            </setting>
         </ShowUI.Properties.Settings>
     </applicationSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup>
@@ -51,15 +55,7 @@
 </providers>
 </entityFramework>
     <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="ThroughtputServiceSoap" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://10.224.81.49/sampling/services/ThroughtputService.asmx"
-                binding="basicHttpBinding" bindingConfiguration="ThroughtputServiceSoap"
-                contract="ThroughtputService.ThroughtputServiceSoap" name="ThroughtputServiceSoap" />
-        </client>
+        <bindings />
+        <client />
     </system.serviceModel>
 </configuration>
