--- a/ShowUI/ShowUI.csproj
+++ b/ShowUI/ShowUI.csproj
@@ -104,6 +104,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AgentSupport.cs" />
     <Compile Include="AntiVirusCheck.cs" />
     <Compile Include="AutoClosingMessageBox.cs" />
     <Compile Include="AutomationHelper\DataPathloss.cs" />
