--- a/ShowUI/ShowUI.csproj
+++ b/ShowUI/ShowUI.csproj
@@ -130,6 +130,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmCableChange.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCableChange.Designer.cs">
+      <DependentUpon>frmCableChange.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmChangePass.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -281,6 +287,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.map</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmCableChange.resx">
+      <DependentUpon>frmCableChange.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmChangePass.resx">
       <DependentUpon>frmChangePass.cs</DependentUpon>
     </EmbeddedResource>
