--- a/ShowUI/app.config
+++ b/ShowUI/app.config
@@ -1,59 +1,57 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="ShowUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
+	<configSections>
+		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="ShowUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+		</sectionGroup>
 
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </configSections>
-    <applicationSettings>
-        <ShowUI.Properties.Settings>
-            <setting name="ShowUI4_6_ATE_CHECKLIST_WebService" serializeAs="String">
-                <value>http://10.224.81.75/PCKPI/Service/WebService.asmx</value>
-            </setting>
-            <setting name="ShowUI4_6_GET_ATE_SUM_TESTED_DUT_Servicepostdata"
+		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+	</configSections>
+	<applicationSettings>
+		<ShowUI.Properties.Settings>
+			<setting name="ShowUI4_6_ATE_CHECKLIST_WebService" serializeAs="String">
+				<value>http://10.224.81.75/PCKPI/Service/WebService.asmx</value>
+			</setting>
+			<setting name="ShowUI4_6_GET_ATE_SUM_TESTED_DUT_Servicepostdata"
                 serializeAs="String">
-                <value>http://10.224.81.154/service/Servicepostdata.asmx</value>
-            </setting>
-            <setting name="ShowUI4_6_SvFPS_WebService" serializeAs="String">
-                <value>http://10.224.81.63/FPS/WebService.asmx</value>
-            </setting>
-            <setting name="ShowUI4_8_B05_SERVICE_CENTER_B05_Service" serializeAs="String">
-                <value>http://10.224.81.63/Servicecenter/Services/B05_Service.asmx</value>
-            </setting>
-            <setting name="ShowUI5_3_SFISB05_SV_Servicepostdata" serializeAs="String">
-                <value>http://10.224.81.154/B05/Servicepostdata.asmx</value>
-            </setting>
-            <setting name="ShowUI5_3_SFISB05_SQL_SV_Service" serializeAs="String">
-                <value>http://10.224.81.64/webservicesql/webservicesql.asmx</value>
-            </setting>
-            <setting name="ISC" serializeAs="String">
-                <value>http://10.228.110.45/ISCService/Servicepostdata.asmx</value>
-            </setting>
-            <setting name="ShowUI_ISC_Service" serializeAs="String">
-                <value>http://10.228.110.45/ISCService/Servicepostdata.asmx</value>
-            </setting>
-            <setting name="ShowUI_ISC_Service_Servicepostdata" serializeAs="String">
-                <value>http://10.228.110.45/ISCService/Servicepostdata.asmx</value>
-            </setting>
-            <setting name="ShowUI_ISCB05_Service_B05_Service" serializeAs="String">
-                <value>http://10.224.81.99/ServiceCenter/Services/B05_Service.asmx</value>
-            </setting>
-            <setting name="ShowUI_ThroughtputService_ThroughtputService"
-                serializeAs="String">
-                <value>http://10.224.81.49/sampling/Services/ThroughtputService.asmx</value>
-            </setting>
-        </ShowUI.Properties.Settings>
-    </applicationSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup>
-<entityFramework>
-<providers>
-<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-</providers>
-</entityFramework>
-    <system.serviceModel>
-        <bindings />
-        <client />
-    </system.serviceModel>
+				<value>http://10.224.81.154/service/Servicepostdata.asmx</value>
+			</setting>
+			<setting name="ShowUI4_6_SvFPS_WebService" serializeAs="String">
+				<value>http://10.224.81.63/FPS/WebService.asmx</value>
+			</setting>
+			<setting name="ShowUI4_8_B05_SERVICE_CENTER_B05_Service" serializeAs="String">
+				<value>http://10.224.81.63/Servicecenter/Services/B05_Service.asmx</value>
+			</setting>
+			<setting name="ShowUI5_3_SFISB05_SV_Servicepostdata" serializeAs="String">
+				<value>http://10.224.81.154/B05/Servicepostdata.asmx</value>
+			</setting>
+			<setting name="ShowUI5_3_SFISB05_SQL_SV_Service" serializeAs="String">
+				<value>http://10.224.81.64/webservicesql/webservicesql.asmx</value>
+			</setting>
+			<setting name="ISC" serializeAs="String">
+				<value>http://10.228.110.45/ISCService/Servicepostdata.asmx</value>
+			</setting>
+			<setting name="ShowUI_ISC_Service" serializeAs="String">
+				<value>http://10.228.110.45/ISCService/Servicepostdata.asmx</value>
+			</setting>
+			<setting name="ShowUI_ISC_Service_Servicepostdata" serializeAs="String">
+				<value>http://10.228.110.45/ISCService/Servicepostdata.asmx</value>
+			</setting>
+			<setting name="ShowUI_ISCB05_Service_B05_Service" serializeAs="String">
+				<value>http://10.224.81.99/ServiceCenter/Services/B05_Service.asmx</value>
+			</setting>
+		</ShowUI.Properties.Settings>
+	</applicationSettings>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+	</startup>
+	<entityFramework>
+		<providers>
+			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+		</providers>
+	</entityFramework>
+	<system.serviceModel>
+		<bindings />
+		<client />
+	</system.serviceModel>
 </configuration>
